--- a/index.html
+++ b/index.html
@@ -3,19 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tema tentang Kata-kata Patah Hati</title>
+    <title>Cerita Patah Hati</title>
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
     <header>
-        <h1>Tema tentang Kata-kata Patah Hati</h1>
+        <h1>Cerita Patah Hati</h1>
     </header>
     <main>
         <article>
             <h2>Artikel 1</h2>
             <p>Ini adalah artikel tentang kata-kata patah hati.</p>
             <footer>
-                <p>Ditulis oleh: John Doe</p>
+                <p>Odang Bangkit Cademy Batch 6</p>
             </footer>
         </article>
         <article>
@@ -30,13 +30,13 @@
         <img src="images/profile.jpg" alt="Foto Profil">
         <p>Biodata:</p>
         <ul>
-            <li>Nama: John Doe</li>
+            <li>Odang</li>
             <li>Usia: 30 tahun</li>
-            <li>Lokasi: Kota A</li>
+            <li>Universitas Buana Perjuangan Karawang</li>
         </ul>
     </aside>
     <footer>
-        <p>&copy; 2024 Tema tentang Kata-kata Patah Hati</p>
+        <p>&copy; 2024 Cerita Patah Hati</p>
     </footer>
 </body>
 </html>
